fix panel-box and centre-container on mobile - prevents overflow-x on mobile

--- a/web/static/global.css
+++ b/web/static/global.css
@@ -2,9 +2,9 @@
 
 :root {
   /* snatched from sveltekit vercel boilerplate tysm */
-  max-width: 100vw;
-  min-width: 100vw;
-  width: 100vw;
+  max-width: 100vw !important;
+  min-width: 100vw !important;
+  width: 100vw !important;
 
   margin: 0px;
   margin-top: 0px;
@@ -65,7 +65,6 @@ body {
   background-image: none;
 }
 
-}
 .container {
   /* for centring and positioning centre-container */
   display: flex;
@@ -96,6 +95,8 @@ body {
   padding-bottom: 12px;
   padding-left: 12px;
   padding-right: 12px;
+  align-self: center;
+  justify-content: center;
 
   border-width: 3px;
   border-style: solid;
@@ -104,7 +105,7 @@ body {
   background-color: #fff;
   font-family: Poppins, sans-serif;
   width: 744px; /* target: should be just enough to squeeze in two activity log cards */
-  max-width: 100%; /* maximum: to ensure proper functionality and full visibility on mobile and smaller screens */
+  max-width: 90vw; /* maximum: to ensure proper functionality and full visibility on mobile and smaller screens */
 
   /* ensure 'ruthless' wrapping to maximise mobile compatibility */
   flex-wrap: wrap !important;
